added caption to carousel and pulled some details

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
   <title>The Padding</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,16 +24,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="index.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Privacy</a>
+            <a class="nav-link" href="index.html">Privacy</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Resources</a>
+            <a class="nav-link" href="index.html">Resources</a>
           </li>
         </ul>
       </div>
@@ -45,12 +44,16 @@
 <div id="myCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="images/graph1.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block"></div>
+            <img src="images/graph1.png" class="d-block w-100" alt="Migration to the U.S.">
+            <div class="carousel-caption d-none d-md-block">
+                <p class="small">Migration to the U.S.</p>
+            </div>
         </div>
         <div class="carousel-item">
-            <img src="images/graph2.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block"></div>
+            <img src="images/graph2.png" class="d-block w-100" alt="COVID-19 cases">
+            <div class="carousel-caption d-none d-md-block">
+                <p class="small">COVID-19 cases</p>
+            </div>
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
